# AutowareAuto

./: .aderc  .aderc-amd64-dashing  .aderc-amd64-dashing-lgsvl  .aderc-amd64-foxy  .aderc-amd64-foxy-lgsvl  .aderc-amd64-galactic  .aderc-amd64-galactic-svl  .aderc-arm64  .aderc-arm64-dashing  .aderc-arm64-foxy  .aderc-arm64-foxy-vesc  .aderc-arm64-galactic  .aderc-jetson-f1tenth  .aderc-lgsvl  .aderc-svl  .gitattributes  .gitignore  .gitlab-ci.yml  .webauto-ci.yml  CommonProjectBefore.cmake  README.md  autoware.auto.dashing.repos  autoware.auto.foxy.repos  autoware.auto.galactic.repos  lgsvl-sensors.json  pure_pursuit_node.yaml  vcs_import.bash
src/avp_web_interface/: CMakeLists.txt  index.html  package.xml  script.js
src/avp_web_interface/design/: avp_web_interface-design.md
src/avp_web_interface/include/avp_web_interface/: avp_web_interface.hpp  avp_web_interface_node.hpp  visibility_control.hpp
src/avp_web_interface/src/: avp_web_interface.cpp  avp_web_interface_node.cpp  main.cpp
src/avp_web_interface/test/: gtest_main.cpp  test_avp_web_interface.cpp
src/avp_web_interface/web/: index.html  script.js
src/common/autoware_auto_msg_transformations/: CMakeLists.txt  package.xml
src/common/autoware_auto_msg_transformations/design/: autoware_auto_msg_transformations-design.md
src/common/autoware_auto_msg_transformations/src/: autoware_auto_msg_transformations.cpp
src/common/autoware_auto_msg_transformations/test/: test_autoware_auto_msg_transformations.cpp
src/common/autoware_utils/: CMakeLists.txt  package.xml
src/common/monitored_node/: CMakeLists.txt  package.xml
src/common/monitored_node/doc/: design.md
src/common/synchronized_subscription/: CMakeLists.txt  package.xml
src/common/synchronized_subscription/design/: synchronized_subscription-design.md
src/common/synchronized_subscription/launch/: synchronized_subscription.launch.py
src/common/synchronized_subscription/src/: synchronized_subscription.cpp
src/common/synchronized_subscription/test/: test_synchronized_subscription.cpp
src/drivers/cepton_node/: .gitignore  CMakeLists.txt  package.xml
src/drivers/cepton_node/design/: cepton_node-design.md
src/drivers/cepton_node/param/: cepton_node.param.yaml  cepton_test.param.yaml
src/drivers/cepton_node/src/: cepton_block_main.cpp  cepton_block_node.cpp  cepton_cloud_main.cpp  cepton_cloud_node.cpp  cepton_common.cpp
src/drivers/cepton_node/test/: calibration_packet.hpp  cepton_node.test.py  replayer.cpp
src/drivers/dataspeed_ford_interface/: CMakeLists.txt  package.xml
src/drivers/dataspeed_ford_interface/design/: dataspeed_ford_interface-design.md
src/drivers/dataspeed_ford_interface/launch/: dataspeed_ford_interface.launch.py
src/drivers/dataspeed_ford_interface/param/: defaults.param.yaml  test.param.yaml
src/drivers/dataspeed_ford_interface/src/: dataspeed_ford_interface.cpp  dataspeed_ford_interface_node.cpp
src/drivers/dataspeed_ford_interface/test/: test_dataspeed_ford_interface.cpp
src/drivers/lgsvl_simulation/: CMakeLists.txt  package.xml
src/drivers/lgsvl_simulation/launch/: sim.launch.py
src/drivers/lgsvl_simulation/lgsvl_simulation/: lgsvl_simulation_main.py  lgsvl_simulation_node.py
src/drivers/lgsvl_simulation/param/: test.param.yaml
src/drivers/ssc_interface/: CMakeLists.txt  package.xml
src/drivers/ssc_interface/design/: ssc_interface-design.md
src/drivers/ssc_interface/launch/: ssc_interface.launch.py
src/drivers/ssc_interface/param/: defaults.param.yaml
src/drivers/ssc_interface/src/: ssc_interface.cpp  ssc_interface_node.cpp
src/drivers/ssc_interface/test/: test_ssc_interface.cpp  test_ssc_interface.hpp
src/drivers/vesc_interface/: CMakeLists.txt  package.xml
src/drivers/vesc_interface/design/: vesc_interface-design.md
src/drivers/vesc_interface/launch/: vesc_interface.launch.py
src/drivers/vesc_interface/param/: vesc_config.param.yaml
src/drivers/vesc_interface/src/: vesc_interface.cpp  vesc_interface_node.cpp
src/drivers/vesc_interface/test/: test_vesc_interface.cpp
src/launch/f1tenth_launch/: CMakeLists.txt  package.xml
src/launch/f1tenth_launch/data/: red_bull_ring_racetrack.pgm  red_bull_ring_racetrack.yaml
src/launch/f1tenth_launch/design/: f1tenth_launch-design.md
src/launch/f1tenth_launch/launch/: f1tenth_joystick_controller.launch.py  f1tenth_localization.launch.py  f1tenth_mapping_demo.launch.py  f1tenth_planning.launch.py  f1tenth_recordreplay_demo.launch.py  f1tenth_vehicle.launch.py  f1tenth_vehicle_svl.launch.py  f1tenth_vehicle_vesc.launch.py
src/launch/f1tenth_launch/param/: amcl.param.yaml  joy.param.yaml  logitech_f310_basic.param.yaml  logitech_f710_basic.param.yaml  mapper_params_online_async.param.yaml  pure_pursuit.param.yaml  recordreplay_planner.param.yaml  urg_node_serial.param.yaml  vesc.param.yaml  vesc_config.param.yaml  vesc_to_odom_node.param.yaml
src/planning/astar_search/: CMakeLists.txt  package.xml
src/planning/astar_search/design/: astar_search-design.md
src/planning/astar_search/src/: astar_search.cpp
src/planning/behavior_path_planner/: CMakeLists.txt  Readme.md  package.xml
src/planning/behavior_path_planner/config/: behavior_path_planner.param.yaml
src/planning/behavior_path_planner/launch/: behavior_path_planner.launch.py  behavior_path_planner.launch.xml
src/planning/behavior_path_planner/src/: behavior_path_planner_node.cpp  behavior_tree_manager.cpp  path_utilities.cpp  route_handler.cpp  turn_signal_decider.cpp  utilities.cpp
src/planning/behavior_velocity_planner_nodes/: CMakeLists.txt  README.md  package.xml
src/planning/costmap_generator/: CMakeLists.txt  package.xml
src/planning/freespace_planner/: CMakeLists.txt  README.md  package.xml
src/planning/global_velocity_planner/: CMakeLists.txt  package.xml
src/planning/interactive_trajectory_spoofer/: CMakeLists.txt  package.xml
src/tools/measurement_transformer_nodes/: CMakeLists.txt  package.xml
src/tools/test_node/: CMakeLists.txt  package.xml
src/tools/vehicle_parameters_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
(+1274 files in other folders)
