<?xml version="1.0"?>
<!--
 Copyright 2021 Arm Limited and Contributors.

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<!DOCTYPE xml>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monitored_node</name>
  <version>1.0.0</version>
  <description>
    Library to build monitored nodes where performance degredations are detected and reported.
  </description>
  <maintainer email="liyou.zhou@arm.com">Liyou Zhou</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>diagnostic_msgs</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
