<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_launch</name>
  <version>1.0.0</version>
  <description>Contains launch files and configs to run f1tenth demos</description>
  <maintainer email="ryohsuke.mitsudome@tier4.jp">Ryohsuke Mitsudome</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>autoware_rviz_plugins</exec_depend>
  <exec_depend>joystick_vehicle_interface_nodes</exec_depend>
  <exec_depend>lgsvl_interface</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>pure_pursuit_nodes</exec_depend>
  <exec_depend>recordreplay_planner_nodes</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>ssc_interface</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>trajectory_follower_nodes</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
