<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>behavior_velocity_planner_nodes</name>
  <version>1.0.0</version>
  <description>ROS2 Node that does HD-Map Related Velocity Planning on Give Paths</description>
  <maintainer email="mfc@leodrive.ai">M. Fatih Cırıt</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_auto_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <depend>behavior_velocity_planner</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_extension</depend>
  <depend>point_cloud_msg_wrapper</depend>
  <depend>vehicle_constants_manager</depend>
  <depend>autoware_utils</depend>
  <depend>time_utils</depend>
  <depend>autoware_auto_geometry</depend>
  <depend>tf2_ros</depend>

  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
